[tool.poetry]
name = "vmbench"
version = "0.1.0"
description = ""
authors = ["euri10 <benoit.barthelet@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
